hotfix class for working with checking out and deploying to hotfixable stages

--- a/spec/fixtures/config/gta.yml
+++ b/spec/fixtures/config/gta.yml
@@ -11,6 +11,7 @@ activator:
     tag: staging/*
     repository: git@heroku.com:activator-staging.git
     restorable: true
+    hotfixable: true
 
   qa:
     source: staging
