[#54233492] Tags are found via git via a tag finder that lists tags and finds newest one. Configured of course!

--- a/spec/fixtures/config/gta.yml
+++ b/spec/fixtures/config/gta.yml
@@ -4,11 +4,11 @@ activator:
 
   ci:
     source: origin
+    tag: ci/*
     repository: git@github.com:socialchorus/activator.git
 
   staging:
     source: ci
-    tag: staging/*
     repository: git@heroku.com:activator-staging.git
     restorable: true
     hotfixable: true
